# P1RV-fusee

./: .gitignore  CMakeLists.txt  Makefile  README.md  e.sh  threading.cpp  threading.hpp
doc/: README.md  dynamic_model.tex
interface/: CMakeLists.txt  P1RV-fusee-interface  interface.cpp
ressources/: background.stl
simulator/: CMakeLists.txt  DartConfiguration.tcl  P1RV-fusee-arduino-code.cpp  P1RV-fusee-simulator  simulator.cpp  threading.hpp
simulator/arduino/: CMakeLists.txt  P1RV-fusee-arduino-code.cpp  arduinomain.cpp  myarduino.hpp
simulator/arduino/fusee/: CMakeLists.txt  fusee.ino
simulator/arduino/my_arduino_layer/: CMakeLists.txt  arduinomain.cpp  myarduino.hpp
simulator/arduino/my_arduino_layer/rocket-booster/ideal-booster/: ideal-booster.cpp  ideal-booster.hpp
simulator/arduino/my_arduino_layer/sensors/height-sensor/: height-sensor.cpp  height-sensor.hpp
simulator/arduino/my_arduino_layer/serial/: myserial.cpp  myserial.hpp
simulator/simulation/: CMakeLists.txt  simulation.cpp  simulation.hpp
simulator/simulation/dynamic-model/: cardan-model.cpp  cardan-model.hpp  dynamic-model.cpp  dynamic-model.hpp  parameters.hpp  quaternions-model.cpp  quaternions-model.hpp  simple-model.cpp  simple-model.hpp  solver.cpp  solver.hpp
tests/: CMakeLists.txt  tests.cpp  unit_tests
